tests/NormalTests/paczka1/fuzzy1/98070815.err
Error in line 1: S262 A826 64,96
Error in line 10: 0sxTLwvnYnv S757 84,7
Error in line 12: MipZRLa2 A826 79,3
Error in line 9: E42 S304 59,3
Error in line 5: 9rwpThF6LO S757 79,5
Error in line 23: E42 A826 41,2
Error in line 29: 0sxTLwvnYnv A826 -3,4
